# do-select-cognida-P01

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  test_cases.py
app/: main.py  test_cases.py
app/calculation/api/v1/endpoints/: calculations.py
app/calculation/api/v1/models/: request_models.py  response_model.py
app/calculation/api/v1/routes/: api.py
app/calculation/api/v1/services/: identifier.py  process_data.py
calculation/api/v1/endpoints/: calculations.py
calculation/api/v1/models/: request_models.py
calculation/api/v1/routes/: api.py
calculation/api/v1/services/: identifier.py  parsers.py  process_data.py
core_services/v1/services/: resource.py
htmlcov/: __init___py.html  class_index.html  function_index.html  index.html  main_py.html  status.json  test_cases_py.html  z_0383abcc613c715a___init___py.html  z_0383abcc613c715a_calculations_py.html  z_0ade290261b45594___init___py.html  z_0ade290261b45594_parsers_py.html  z_0ade290261b45594_process_data_py.html  z_162d53955dbbc672_request_models_py.html  z_162d53955dbbc672_response_model_py.html  z_399653ac349304e6_resource_py.html  z_50e6b10a8cf9c5d6___init___py.html  z_905d4b46c69b6c2f___init___py.html  z_b9be1e780a00481c___init___py.html  z_b9be1e780a00481c_api_py.html  z_fbc6b1b77ad100d3___init___py.html
