[tool.black]
target_version = ['py39']
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
)/
'''

[tool.isort]
py_version = 39
line_length = 99
multi_line_output = 3
include_trailing_comma = true
profile = 'black'
skip_gitignore = true

[tool.pycln]
all = true

[tool.poetry.group.new_group]
optional = true
